--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" /><!--照片-->
+
+									<!--要加我的照片-->
+									<img src="images/me.jpg" alt="" />
 								</a>
 							</article>
 
 						<!-- Work -->
+						<!--作業集-->
 							<article id="work" class="panel">
 								<header>
 									<h2>Work</h2>
@@ -48,7 +51,7 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href="https://youtube.com" class="image fit"><img src="images/pic01.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
