--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://youtube.com" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href="https://anson0359.github.io/midproject/work/index.html" class="image fit"><img src="images/pic01.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
