--- a/work/index.html
+++ b/work/index.html
@@ -35,6 +35,24 @@
             <script src="main.js"></script>
         </div>
 
+        <div id="magic">
+            <h1>愛情運勢</h1>
+        <div>
+            <h2 id="question"></h2>
+            <div id="options"></div>
+        </div>
+        <input id="startButton" type="button" value="開始作答">
+        </div>
+
+        <div id="youtubeplayer">
+            <h1>YOUTUBE 播放器</h1>
+            <h2 id="playerh2"></h2><!--播放歌曲名-->
+            <div id="player"></div>
+            <br>
+            <input id="playButton" type="button" value="Play">
+            <script src="https://www.youtube.com/iframe_api"></script>
+        </div>
+
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="main.js"></script>
     </body>
