--- a/work/index.html
+++ b/work/index.html
@@ -13,7 +13,7 @@
         </div>
 
         <div id="random">
-            <h2>?</h2>
+            <h2 id="boxh2">?</h2>
             <input id="run" type="button" value="抽獎">
             <input id="take" type="button" value="領取"><!--要返回頁面-->
             <ul>
