--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://anson0359.github.io/midproject/work/index.html" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href="https://anson0359.github.io/midproject/work/index.html" class="image fit"><img src="images/RPGgame.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+											<a href="https://anson0359.github.io/Webmidproject/frontpage.html" class="image fit"><img src="images/webmidproject.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											<a href="https://anson0359.github.io/finalproject/" class="image fit"><img src="images/snack.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
